stops buttons jumping around

--- a/static/style.css
+++ b/static/style.css
@@ -223,7 +223,6 @@ div.content ul.contact {
 
 div.navigation {
   background-color: inherit;
-  height: 5em;
   clear: both;
   position: fixed;
   bottom: 0;
@@ -231,7 +230,7 @@ div.navigation {
   right: 0;
   padding-top: 1%;
   text-align: center;
-  padding-bottom: 2em;
+  padding-bottom: 0.3em;
 }
 
 div.navigation div.card {
